--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,12 +16,11 @@ jobs:
     - name: Setup nix
       uses: cachix/install-nix-action@v22
 
-    - name: Flake setup
-      run: nix build
-    - run: nix flake check
-
     - name: Build
       run: nix develop --command nix build
+
+    - name: Flake check 
+      run: nix flake check --all-systems
 
     - name: Test
       run: nix develop --command go test -v ./...
